code/force-app/main/default/objects/Foreign_Exchange__c/Foreign_Exchange__c.object-meta.xml
<CustomObject>
    <label>匯率</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>