code/force-app/main/default/objects/Foreign_Exchange__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <label>Currency Pair</label>
    <length>10</length>
    <type>Text</type>
</CustomField>