code/force-app/main/default/objects/Foreign_Exchange__c/fields/CURRENCY_CODE__c.field-meta.xml
<CustomField>
    <fullName>CURRENCY_CODE__c</fullName>
    <label>CURRENCY CODE</label>
    <length>10</length>
    <type>Text</type>
</CustomField>