code/force-app/main/default/objects/Foreign_Exchange__c/fields/Currency_Pair__c.field-meta.xml
<CustomField>
    <fullName>Currency_Pair__c</fullName>
    <formula>CURRENCY_CODE__c +&apos;/&apos;+ TFR_CURRENCY_CODE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Currency Pair</label>
    <type>Text</type>
</CustomField>