code/force-app/main/default/objects/Foreign_Exchange__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>日期</label>
    <type>Date</type>
</CustomField>