code/force-app/main/default/objects/Foreign_Exchange__c/fields/Percent_Change__c.field-meta.xml
<CustomField>
    <fullName>Percent_Change__c</fullName>
    <label>% Change</label>
    <precision>9</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>