code/force-app/main/default/objects/Foreign_Exchange__c/fields/TFR_CURRENCY_CODE__c.field-meta.xml
<CustomField>
    <fullName>TFR_CURRENCY_CODE__c</fullName>
    <label>TFR CURRENCY CODE</label>
    <length>10</length>
    <type>Text</type>
</CustomField>