code/force-app/main/default/objects/Foreign_Exchange__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <label>Value</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>