code/force-app/main/default/objects/Foreign_Exchange__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Country__c</columns>
    <columns>Date__c</columns>
    <columns>Currency_Pair__c</columns>
    <columns>Value__c</columns>
    <columns>Change__c</columns>
    <columns>Percent_Change__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>