code/force-app/main/default/objects/Foreign_Exchange__c/listViews/Today.listView-meta.xml
<ListView>
    <fullName>Today</fullName>
    <columns>Country__c</columns>
    <columns>Date__c</columns>
    <columns>Currency_Pair__c</columns>
    <columns>Value__c</columns>
    <columns>Change__c</columns>
    <columns>Percent_Change__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today</label>
</ListView>